--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -43,6 +43,12 @@
     "jsx": "react-jsx",
     "noImplicitAny": false,
     "strictNullChecks": false,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
